--- a/web_flask/templates/7-states_list.html
+++ b/web_flask/templates/7-states_list.html
@@ -6,7 +6,7 @@
     <BODY>
         <H1>States</H1>
     <UL>
-        {% for state in all_states %}
+        {% for state in all_states|sort(attribute="name") %}
         <li>State: {{ state.id }} <B>{{ state.name }}</B></li>
         {% endfor %}
     </UL>
